--- a/TMDT/Web.config
+++ b/TMDT/Web.config
@@ -4,18 +4,57 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  
+
   <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <!--config paypal-->
+  <paypal>
+    <settings>
+      <add name="mode" value="sandbox" />
+      <add name="connectionTimeout" value="360000" />
+      <add name="requestRetries" value="1" />
+      <add name="clientId" value="AXGoX3nBf8PPch6JEMgElJ32XB_FcDwPP0BW6PNldryX58hUFMtRFkQ5yhpvlxshnpj3Gbh7oCaHZnuc" />
+      <add name="clientSecret" value="EJ-38aHRuizOrXYVmyxWifr4X-7hi4JJ9LEDMQU6IE2rWiSav_F1UOxz7fhQIgaqnqunmUTFG43FXFMA" />
+    </settings>
+  </paypal>
+  <!-- log4net settings -->
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="my_app.log"/>
+      <appendToFile value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date
+      [%thread] %-5level %logger [%property{NDC}] %message%newline"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG"/>
+      <appender-ref ref="FileAppender"/>
+    </root>
+  </log4net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=TMDT-20201130101502;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="PayPalLogger" value="PayPal.Log.Log4netLogger"/>
+
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--Email Config-->
+    <add key="FromEmailAddress" value="hoangansu9@gmail.com" />
+    <add key="FromEmailDisplayName" value="Đơn hàng mới" />
+    <add key="FromEmailPassword" value="01696059814" />
+    <add key="SMTPHost" value="smtp.gmail.com" />
+    <add key="SMTPPort" value="587" />
+    <add key="EnabledSSL" value="true" />
+    <add key="ToEmailAddress" value="suhoangan8@gmail.com" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -87,4 +126,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="hoangansu9@gmail.com">
+        <network host="smtp.gmail.com" port="587" userName="hoangansu9@gmail.com" password="01696059814" enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
