--- a/TMDT/TMDT.csproj
+++ b/TMDT/TMDT.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Controllers\BooksController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\HttpErrorsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PaypalController.cs" />
     <Compile Include="Controllers\ProvidersController.cs" />
@@ -306,7 +307,7 @@
     <Content Include="Views\Role\Index.cshtml" />
     <Content Include="Views\Paypal\FailureView.cshtml" />
     <Content Include="Views\Paypal\SuccessView.cshtml" />
-    <None Include="Views\URL404.cshtml" />
+    <Content Include="Views\HttpErrors\NotFound.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
