--- a/TMDT/Web.config
+++ b/TMDT/Web.config
@@ -65,6 +65,10 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <httpErrors errorMode="Custom" existingResponse="Auto">
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" path="/HttpErrors/NotFound" responseMode="ExecuteURL"/>
+    </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
