--- a/TMDT/Web.config
+++ b/TMDT/Web.config
@@ -7,7 +7,7 @@
   
 
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -25,23 +25,22 @@
   <!-- log4net settings -->
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="my_app.log"/>
-      <appendToFile value="true"/>
+      <file value="my_app.log" />
+      <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date
-      [%thread] %-5level %logger [%property{NDC}] %message%newline"/>
+        <conversionPattern value="%date       [%thread] %-5level %logger [%property{NDC}] %message%newline" />
       </layout>
     </appender>
     <root>
-      <level value="DEBUG"/>
-      <appender-ref ref="FileAppender"/>
+      <level value="DEBUG" />
+      <appender-ref ref="FileAppender" />
     </root>
   </log4net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=TMDT-20201130101502;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="PayPalLogger" value="PayPal.Log.Log4netLogger"/>
+    <add key="PayPalLogger" value="PayPal.Log.Log4netLogger" />
 
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -67,7 +66,7 @@
     </modules>
     <httpErrors errorMode="Custom" existingResponse="Auto">
       <remove statusCode="404" subStatusCode="-1" />
-      <error statusCode="404" path="/HttpErrors/NotFound" responseMode="ExecuteURL"/>
+      <error statusCode="404" path="/HttpErrors/NotFound" responseMode="ExecuteURL" />
     </httpErrors>
   </system.webServer>
   <runtime>
