--- a/TMDT/TMDT.csproj
+++ b/TMDT/TMDT.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Controllers\HttpErrorsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ManageRoleController.cs" />
+    <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\PaypalController.cs" />
     <Compile Include="Controllers\ProvidersController.cs" />
     <Compile Include="Controllers\PublishersController.cs" />
@@ -197,9 +198,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="MailHelper\MailHelper.cs" />
-    <Compile Include="Migrations\202012070703405__new_table.cs" />
-    <Compile Include="Migrations\202012070703405__new_table.Designer.cs">
-      <DependentUpon>202012070703405__new_table.cs</DependentUpon>
+    <Compile Include="Migrations\202012170935353_neworder.cs" />
+    <Compile Include="Migrations\202012170935353_neworder.Designer.cs">
+      <DependentUpon>202012170935353_neworder.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -341,7 +342,11 @@
     <Content Include="Views\ManageRole\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
     <Content Include="Views\ShowImgCurrentUser\Index.cshtml" />
-
+    <Content Include="Views\Orders\Create.cshtml" />
+    <Content Include="Views\Orders\Delete.cshtml" />
+    <Content Include="Views\Orders\Details.cshtml" />
+    <Content Include="Views\Orders\Edit.cshtml" />
+    <Content Include="Views\Orders\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -360,8 +365,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202012070703405__new_table.resx">
-      <DependentUpon>202012070703405__new_table.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202012170935353_neworder.resx">
+      <DependentUpon>202012170935353_neworder.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
