--- a/TMDT/Web.config
+++ b/TMDT/Web.config
@@ -48,7 +48,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--Email Config-->
     <add key="FromEmailAddress" value="hoangansu9@gmail.com" />
-    <add key="FromEmailDisplayName" value="Đơn hàng mới" />
+    <add key="FromEmailDisplayName" value="Đơn hàng mới từ Shop TMDT04" />
     <add key="FromEmailPassword" value="01696059814" />
     <add key="SMTPHost" value="smtp.gmail.com" />
     <add key="SMTPPort" value="587" />
