--- a/TMDT/Web.config
+++ b/TMDT/Web.config
@@ -4,7 +4,6 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  
 
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
@@ -49,7 +48,7 @@
     <!--Email Config-->
     <add key="FromEmailAddress" value="hoangansu9@gmail.com" />
     <add key="FromEmailDisplayName" value="Đơn hàng mới từ Shop TMDT04" />
-    <add key="FromEmailPassword" value="01696059814" />
+    <add key="FromEmailPassword" value="suhoangan1999" />
     <add key="SMTPHost" value="smtp.gmail.com" />
     <add key="SMTPPort" value="587" />
     <add key="EnabledSSL" value="true" />
@@ -126,7 +125,7 @@
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="Network" from="hoangansu9@gmail.com">
-        <network host="smtp.gmail.com" port="587" userName="hoangansu9@gmail.com" password="01696059814" enableSsl="true" />
+        <network host="smtp.gmail.com" port="587" userName="hoangansu9@gmail.com" password="suhoangan1999" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
