--- a/TMDT/TMDT.csproj
+++ b/TMDT/TMDT.csproj
@@ -211,6 +211,10 @@
     <Compile Include="Migrations\202012171439219_payment_order.Designer.cs">
       <DependentUpon>202012171439219_payment_order.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101020231470__new_book_instock.cs" />
+    <Compile Include="Migrations\202101020231470__new_book_instock.Designer.cs">
+      <DependentUpon>202101020231470__new_book_instock.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Author.cs" />
@@ -382,6 +386,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202012171439219_payment_order.resx">
       <DependentUpon>202012171439219_payment_order.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101020231470__new_book_instock.resx">
+      <DependentUpon>202101020231470__new_book_instock.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
