--- a/TMDT/Web.config
+++ b/TMDT/Web.config
@@ -53,6 +53,10 @@
     <add key="SMTPPort" value="587" />
     <add key="EnabledSSL" value="true" />
     <add key="ToEmailAddress" value="suhoangan8@gmail.com" />
+	  <!--Facebook App Info-->
+	  <add key="FbAppId" value="211514653964501
+" />
+	  <add key="FbAppSecret" value="189a00c2d2d334834f9baffacb7d9cab" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
