--- a/TMDT/TMDT.csproj
+++ b/TMDT/TMDT.csproj
@@ -268,6 +268,7 @@
     <Content Include="Content\LayoutAdminStyles.scss" />
     <None Include="Content\Site.scss" />
     <Content Include="Content\Images\paypal.svg" />
+    <Content Include="Mail\Email.html" />
     <Content Include="Scripts\ajaxFilter.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
