--- a/TMDT/TMDT.csproj
+++ b/TMDT/TMDT.csproj
@@ -397,6 +397,7 @@
     <Content Include="Views\Price\Index.cshtml" />
     <Content Include="Views\Manage\ChangeAddress.cshtml" />
     <Content Include="Views\ManageRole\Detail.cshtml" />
+    <Content Include="Views\ManageRole\ChangePassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
