edit tables and button

--- a/TMDT/TMDT.csproj
+++ b/TMDT/TMDT.csproj
@@ -276,9 +276,46 @@
     <Content Include="Content\LayoutAdminStyles.scss" />
     <None Include="Content\Site.scss" />
     <Content Include="Content\Images\paypal.svg" />
+    <Content Include="Library\font-awesome-4.7.0\css\font-awesome.css" />
+    <Content Include="Library\font-awesome-4.7.0\css\font-awesome.min.css" />
+    <Content Include="Library\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
+    <Content Include="Library\font-awesome-4.7.0\HELP-US-OUT.txt" />
     <Content Include="Scripts\ajaxFilter.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Library\font-awesome-4.7.0\fonts\fontawesome-webfont.eot" />
+    <Content Include="Library\font-awesome-4.7.0\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Library\font-awesome-4.7.0\fonts\fontawesome-webfont.woff" />
+    <Content Include="Library\font-awesome-4.7.0\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Library\font-awesome-4.7.0\fonts\FontAwesome.otf" />
+    <Content Include="Library\font-awesome-4.7.0\less\animated.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\bordered-pulled.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\core.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\fixed-width.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\font-awesome.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\icons.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\larger.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\list.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\mixins.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\path.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\rotated-flipped.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\screen-reader.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\stacked.less" />
+    <Content Include="Library\font-awesome-4.7.0\less\variables.less" />
+    <Content Include="Library\font-awesome-4.7.0\scss\font-awesome.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_animated.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_bordered-pulled.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_core.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_fixed-width.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_icons.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_larger.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_list.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_mixins.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_path.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_rotated-flipped.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_screen-reader.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_stacked.scss" />
+    <Content Include="Library\font-awesome-4.7.0\scss\_variables.scss" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\build-assets.js" />
     <Content Include="Scripts\build-pug.js" />
